--- a/src/app/componentes/livro/livro.component.html
+++ b/src/app/componentes/livro/livro.component.html
@@ -1,4 +1,80 @@
-<form >
+<button mat-raised-button (click)="adicionar()" class="adicionar"> Adicionar </button>
+
+<div *ngFor=" let livro of Livros">
+    <div class="botoes">
+            <button mat-raised-button (click)="deletaDados( livro.id )" color="warn"> Apagar </button>
+            <button mat-raised-button (click)="editaDados( livro )" color="primary"> Editar </button>
+    </div>
+    
+    <div class="lista">
+            <mat-card class="imagem">
+                    <mat-card-content>
+                            <img src="../../../assets/gato1.jpg" alt="Midas" sizes="300px">
+                    </mat-card-content>
+            </mat-card>
+            <div class="item">
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Nome</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ livro.nome }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Descricao</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ livro.descricao }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>    
+                            <mat-card-header>
+                                    <mat-card-title>Autor</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ livro.autor }}</mat-card-content>
+                    </mat-card>
+                    
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Numero de paginas</mat-card-title>        
+                            </mat-card-header>
+                            <mat-card-content>{{ livro.paginas }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Status</mat-card-title>        
+                            </mat-card-header>
+                            <mat-card-content>{{ livro.statusLido }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Lancamento</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ livro.dtLancamento }}</mat-card-content>
+                    </mat-card>
+            </div>        
+    </div>
+</div>
+
+<!-- <form >
+    <div class="form-group">
+        <input type="text" [(ngModel)]="Audio.nome" name="nome">
+        <input type="text" [(ngModel)]="Audio.autor" name="autor" >
+        <input type="text" [(ngModel)]="Audio.descricao" name="descricao">
+        <input type="text" [(ngModel)]="Audio.disponibilidade" name="disponibilidade">
+        <input type="text" [(ngModel)]="Audio.estudio" name="estudio">
+        <input type="text" [(ngModel)]="Audio.duracao" name="nacionalidade">
+        <input type="text" [(ngModel)]="Audio.statusVisto" name="statusVisto">
+        <input type="number" [(ngModel)]="Audio.tipo" name="maxEps">
+        <input type="date" [(ngModel)]="Audio.dtLancamento" name="dtLancamento">
+
+        <input type="submit" value="Enviar" (click)="enviaDados()">
+    </div>
+</form> -->
+
+<!-- <form >
     <div class="form-group">
         <input type="text" [(ngModel)]="Livro.nome" name="nome">
         <input type="text" [(ngModel)]="Livro.autor" name="autor" >
@@ -8,4 +84,4 @@
         <input type="number" [(ngModel)]="Livro.dtLancamento" name="dtLancamento">
         <input type="submit" value="Enviar" (click)="enviaDados()">
     </div>
-</form>
+</form> -->
