--- a/src/app/componentes/quadrinhos/quadrinhos.component.html
+++ b/src/app/componentes/quadrinhos/quadrinhos.component.html
@@ -1,4 +1,103 @@
-<form >
+<button mat-raised-button (click)="adicionar()" class="adicionar"> Adicionar </button>
+
+<div *ngFor=" let quadrinho of Quadrinhos">
+    <div class="botoes">
+            <button mat-raised-button (click)="deletaDados( quadrinho.id )" color="warn"> Apagar </button>
+            <button mat-raised-button (click)="editaDados( quadrinho )" color="primary"> Editar </button>
+    </div>
+    
+    <div class="lista">
+            <mat-card class="imagem">
+                    <mat-card-content>
+                            <img src="../../../assets/gato1.jpg" alt="Midas" sizes="300px">
+                    </mat-card-content>
+            </mat-card>
+            <div class="item">
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Nome</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.nome }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Descricao</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.descricao }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>    
+                            <mat-card-header>
+                                    <mat-card-title>Autor</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.autor }}</mat-card-content>
+                    </mat-card>
+                    
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Numero de capitulos</mat-card-title>        
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.caps }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Disponibilidade</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.disponibilidade }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>                
+                            <mat-card-header>
+                                    <mat-card-title>Nacionalidade</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.nacionalidade }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Status</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.status }}</mat-card-content>        
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Visto</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.statusVisto }}</mat-card-content>
+                    
+                    </mat-card>                    
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Lancamento</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ quadrinho.dtLancamento }}</mat-card-content>
+                    </mat-card>
+            </div>        
+    </div>
+</div>
+
+<!-- <form >
+    <div class="form-group">
+        <input type="text" [(ngModel)]="Audio.nome" name="nome">
+        <input type="text" [(ngModel)]="Audio.autor" name="autor" >
+        <input type="text" [(ngModel)]="Audio.descricao" name="descricao">
+        <input type="text" [(ngModel)]="Audio.disponibilidade" name="disponibilidade">
+        <input type="text" [(ngModel)]="Audio.estudio" name="estudio">
+        <input type="text" [(ngModel)]="Audio.duracao" name="nacionalidade">
+        <input type="text" [(ngModel)]="Audio.statusVisto" name="statusVisto">
+        <input type="number" [(ngModel)]="Audio.tipo" name="maxEps">
+        <input type="date" [(ngModel)]="Audio.dtLancamento" name="dtLancamento">
+
+        <input type="submit" value="Enviar" (click)="enviaDados()">
+    </div>
+</form> -->
+
+<!-- <form >
     <div class="form-group">
         <input type="text" [(ngModel)]="Quadrinhos.nome" name="nome">
         <input type="text" [(ngModel)]="Quadrinhos.autor" name="autor" >
@@ -12,4 +111,4 @@
 
         <input type="submit" value="Enviar" (click)="enviaDados()">
     </div>
-</form>
+</form> -->
