--- a/src/app/componentes/series/series.component.html
+++ b/src/app/componentes/series/series.component.html
@@ -1,4 +1,102 @@
-<form >
+<button mat-raised-button (click)="adicionar()" class="adicionar"> Adicionar </button>
+<div *ngFor=" let serie of Series">
+    <div class="botoes">
+            <button mat-raised-button (click)="deletaDados( serie.id )" color="warn"> Apagar </button>
+            <button mat-raised-button (click)="editaDados( serie )" color="primary"> Editar </button>
+    </div>
+    
+    <div class="lista">
+            <mat-card class="imagem">
+                    <mat-card-content>
+                            <img src="../../../assets/gato1.jpg" alt="Midas" sizes="300px">
+                    </mat-card-content>
+            </mat-card>
+            <div class="item">
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Nome</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.nome }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Descricao</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.descricao }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>    
+                            <mat-card-header>
+                                    <mat-card-title>Autor</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.autor }}</mat-card-content>
+                    </mat-card>
+                    
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Numero de episodios</mat-card-title>        
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.maxEps }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Disponibilidade</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.disponibilidade }}</mat-card-content>
+                    </mat-card>
+                    
+
+                    <mat-card>        
+                            <mat-card-header>
+                                    <mat-card-title>Estudio</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.estudio }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>                
+                            <mat-card-header>
+                                    <mat-card-title>Nacionalidade</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.nacionalidade }}</mat-card-content>
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Status</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.status }}</mat-card-content>        
+                    </mat-card>
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Visto</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.statusVisto }}</mat-card-content>
+                    
+                    </mat-card>
+                    
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Numero de temporadas</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.temps }}</mat-card-content>
+                    </mat-card>
+                    
+
+                    <mat-card>
+                            <mat-card-header>
+                                    <mat-card-title>Lancamento</mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>{{ serie.dtLancamento }}</mat-card-content>
+                    </mat-card>
+            </div>        
+    </div>
+</div>
+
+<!-- <form >
     <div class="form-group">
         <input type="text" [(ngModel)]="Serie.nome" name="nome">
         <input type="text" [(ngModel)]="Serie.autor" name="autor" >
@@ -10,8 +108,8 @@
         <input type="number" [(ngModel)]="Serie.status" name="status">
         <input type="number" [(ngModel)]="Serie.maxEps" name="maxEps">
         <input type="number" [(ngModel)]="Serie.temps" name="temps">
-        <!-- <input type="date" [(ngModel)]="Serie.dtLancamento" name="dtLancamento"> -->
+        <input type="date" [(ngModel)]="Serie.dtLancamento" name="dtLancamento">
 
         <input type="submit" value="Enviar" (click)="enviaDados()">
     </div>
-</form>
+</form> -->
