--- a/src/app/popups/form-desenho/form-desenho.component.css
+++ b/src/app/popups/form-desenho/form-desenho.component.css
@@ -1,5 +1,6 @@
 body{
     margin: 5%;
+    display: flex;
 }
 
 .fechar{
@@ -7,10 +8,21 @@ body{
     width: 10vw;
     height: 10vw;
     margin: 1%;
+    align-self: end;
 }
 
 mat-form-field{
     max-width: 50%;
+    max-height: 15%;
     position: relative;
     left: 1vw;
+}
+
+.envio{
+    max-width: 10vw;
+    width: 10vw;
+    height: 10vw;
+    margin: 1%;
+    align-self: end;
+    position: relative;
 }
