--- a/src/app/popups/form-jogos/form-jogos.component.html
+++ b/src/app/popups/form-jogos/form-jogos.component.html
@@ -1,1 +1,70 @@
-<p>form-jogos works!</p>
+<button mat-raised-button (click)="fechar()" class="fechar" color="warn">X</button>
+
+<form>
+    <p>Digite o nome do jogo:</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite o nome do jogo</mat-label>
+        <input matInput [(ngModel)]="Jogo.nome">
+    </mat-form-field>
+
+    <p>Digite o nome do autor:</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite o autor:</mat-label>
+        <input matInput [(ngModel)]="Jogo.autor" >
+    </mat-form-field>
+
+    <p>Digite a descricao:</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite a descricao:</mat-label>
+        <input matInput [(ngModel)]="Jogo.descricao">
+    </mat-form-field>
+
+    <p>Digite onde pode ser encontrada: <br>(nome do serviço de streaming ou site alternativo)</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Site onde pode ser encontrada</mat-label>
+        <input matInput [(ngModel)]="Jogo.disponibilidade">
+    </mat-form-field>
+
+    <p>Digite o nome do estudio</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Nome do estudio</mat-label>
+        <input matInput [(ngModel)]="Jogo.estudio">
+    </mat-form-field>
+
+    <!-- checkbox ou lista de opcoes talvez agrupar com o proximo -->
+    <div class="checkbox">
+        <div class="status">
+            <p>Está em lançamento ou finalizado:</p>
+            <mat-checkbox>Lançamento</mat-checkbox>
+            <mat-checkbox>finalizado</mat-checkbox>
+        </div>
+
+        <!-- checkbox ou lista de opcoes -->
+        <div class="visto">
+            <p>Já jogou ou não:</p>
+            <mat-checkbox>Já assisti</mat-checkbox>
+            <mat-checkbox>Não assisti</mat-checkbox>
+            <mat-checkbox>Ainda assistirei</mat-checkbox>
+        </div>
+    </div>
+
+    <div class="numero">
+        <div class="duracao">
+            <p>Quanto tempo até zerar?</p>
+            <mat-form-field appearance="fill">
+                <mat-label>Tempo medio da campanha</mat-label>
+                <input matInput type="number" [(ngModel)]="Jogo.duracaoMedia">
+            </mat-form-field>
+        </div>
+    </div>
+    <!-- data -->
+    <div class="data">
+        <p>Quando a serie lancou?</p>
+        <mat-form-field appearance="fill">
+            <mat-label>Digite o ...</mat-label>
+            <input matInput type="date" [(ngModel)]="Jogo.dtLancamento">
+    </mat-form-field>
+    </div>
+</form>
+
+<button mat-raised-button (click)="enviaDados()" class="envio"> Enviar </button>
