--- a/src/app/popups/form-desenho/form-desenho.component.css
+++ b/src/app/popups/form-desenho/form-desenho.component.css
@@ -1,28 +1,39 @@
-body{
-    margin: 5%;
+form{
+    margin-left: 5%;
+}
+
+.checkbox{
     display: flex;
 }
 
-.fechar{
-    max-width: 10vw;
-    width: 10vw;
-    height: 10vw;
-    margin: 1%;
-    align-self: end;
+.visto{
+    margin-left: 10%;
 }
 
-mat-form-field{
-    max-width: 50%;
-    max-height: 15%;
-    position: relative;
-    left: 1vw;
+.numero{
+    display: flex;
+}
+
+.temps{
+    margin-left: 10%;
+}
+
+.data{
+    margin-left: 10%;
+}
+
+.fechar{
+    padding: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
+    align-self: end;
 }
 
 .envio{
-    max-width: 10vw;
-    width: 10vw;
-    height: 10vw;
+    padding: 10px;
     margin: 1%;
     align-self: end;
     position: relative;
+    background-color: #6a4ee6;
+    color: white;
 }
