--- a/src/app/popups/form-desenho/form-desenho.component.html
+++ b/src/app/popups/form-desenho/form-desenho.component.html
@@ -1,63 +1,88 @@
-<button mat-raised-button (click)="fechar()" class="fechar">x</button>
+<button mat-raised-button (click)="fechar()" class="fechar" color="warn">X</button>
 
-<mat-form-field appearance="fill" class="inputText">
-    <p>Digite o nome:</p>
-    <input matInput [(ngModel)]="Desenho.nome">
-</mat-form-field>
-<mat-form-field appearance="fill" class="inputText">
+<form>
     <p>Digite o nome do autor:</p>
-    <input matInput [(ngModel)]="Desenho.autor" >
-</mat-form-field>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite o nome do desenho</mat-label>
+        <input matInput [(ngModel)]="Desenho.nome">
+    </mat-form-field>
 
-<mat-form-field appearance="fill" class="inputText">
+    <p>Digite o nome do autor:</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite o autor:</mat-label>
+        <input matInput [(ngModel)]="Desenho.autor" >
+    </mat-form-field>
+
     <p>Digite a descricao:</p>
-    <input matInput [(ngModel)]="Desenho.descricao">
-</mat-form-field>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite a descricao:</mat-label>
+        <input matInput [(ngModel)]="Desenho.descricao">
+    </mat-form-field>
 
-<mat-form-field appearance="fill" class="inputText">
     <p>Digite onde pode ser encontrada: <br>(nome do serviço de streaming ou site alternativo)</p>
-    <input matInput [(ngModel)]="Desenho.disponibilidade">
-</mat-form-field>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Site onde pode ser encontrada</mat-label>
+        <input matInput [(ngModel)]="Desenho.disponibilidade">
+    </mat-form-field>
 
-<mat-form-field appearance="fill" class="inputText">
     <p>Digite o nome do estudio</p>
-    <input matInput [(ngModel)]="Desenho.estudio">
-</mat-form-field>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Nome do estudio</mat-label>
+        <input matInput [(ngModel)]="Desenho.estudio">
+    </mat-form-field>
 
-<!-- talvez lista de opcoes -->
-<mat-form-field appearance="fill" class="inputText">
     <p>Digite a nacionalidade</p>
-    <input matInput [(ngModel)]="Desenho.nacionalidade">
-</mat-form-field>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Pais origem</mat-label>
+        <input matInput [(ngModel)]="Desenho.nacionalidade">
+    </mat-form-field>
 
-<!-- checkbox ou lista de opcoes talvez agrupar com o proximo -->
-<mat-form-field appearance="fill" class="inputText">
-    <p>Digite se está em lançamento ou finalizado:</p>
-    <input matInput [(ngModel)]="Desenho.status">
-</mat-form-field>
+    <!-- checkbox ou lista de opcoes talvez agrupar com o proximo -->
+    <div class="checkbox">
+        <div class="status">
+            <p>Está em lançamento ou finalizado:</p>
+            <mat-checkbox>Lançamento</mat-checkbox>
+            <mat-checkbox>finalizado</mat-checkbox>
+        </div>
 
-<!-- checkbox ou lista de opcoes -->
-<mat-form-field appearance="fill" class="inputText">
-    <p>Digite se você já assistiu ou não:</p>
-    <input matInput [(ngModel)]="Desenho.statusVisto">
-</mat-form-field>
+        <!-- checkbox ou lista de opcoes -->
+        <div class="visto">
+            <p>Já assistiu ou não:</p>
+            <mat-checkbox>Já assisti</mat-checkbox>
+            <mat-checkbox>Não assisti</mat-checkbox>
+            <mat-checkbox>Ainda assistirei</mat-checkbox>
+        </div>
+    </div>
 
-<!-- numero -->
-<mat-form-field appearance="fill" class="inputText">
-    <p>Digite o numero maximo de episódios:</p>
-    <input matInput [(ngModel)]="Desenho.maxEps">
-</mat-form-field>
+    <div class="numero">
+        <!-- numero -->
+        <div class="maxEps">
+            <p>Quantos episodios a serie possui?</p>
+            <mat-form-field appearance="fill">
+                <mat-label>Digite o ...</mat-label>
+                <input matInput type="number" [(ngModel)]="Desenho.maxEps">
+            </mat-form-field>
+        </div>
 
-<!-- numero -->
-<mat-form-field appearance="fill" class="inputText">
-    <p>Digite o numero de temporadas:</p>
-    <input matInput [(ngModel)]="Desenho.temps">
-</mat-form-field>
+        <!-- numero -->
+        <div class="temps">
+            <p>Quantas temporadas a serie possui?</p>
+            <mat-form-field appearance="fill">
+                <mat-label>Digite o ...</mat-label>
+                <input matInput type="number" [(ngModel)]="Desenho.temps">
+            </mat-form-field>
+        </div>
 
-<!-- data -->
-<mat-form-field appearance="fill" class="inputText">
-    <p>Digite a data de lançamento:</p>
-    <input matInput [(ngModel)]="Desenho.dtLancamento">
-</mat-form-field>
+        <!-- data -->
+        <div class="data">
+            <p>Quando a serie lancou?</p>
+            <mat-form-field appearance="fill">
+                <mat-label>Digite o ...</mat-label>
+                <input matInput type="date" [(ngModel)]="Desenho.dtLancamento">
+        </mat-form-field>
+        </div>
+    </div>
+    
+</form>
 
-<button (click)="enviaDados()" class="envio"> Enviar </button>
+<button mat-raised-button (click)="enviaDados()" class="envio"> Enviar </button>
