--- a/src/app/popups/form-novela/form-novela.component.html
+++ b/src/app/popups/form-novela/form-novela.component.html
@@ -1,1 +1,78 @@
-<p>form-novela works!</p>
+<button mat-raised-button (click)="fechar()" class="fechar" color="warn">X</button>
+
+<form>
+    <p>Digite o nome do autor:</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite o nome da novela</mat-label>
+        <input matInput [(ngModel)]="Novela.nome">
+    </mat-form-field>
+
+    <p>Digite o nome do autor:</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite o autor:</mat-label>
+        <input matInput [(ngModel)]="Novela.autor" >
+    </mat-form-field>
+
+    <p>Digite a descricao:</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Digite a descricao:</mat-label>
+        <input matInput [(ngModel)]="Novela.descricao">
+    </mat-form-field>
+
+    <p>Digite onde pode ser encontrada: <br>(nome do serviço de streaming ou site alternativo)</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Site onde pode ser encontrada</mat-label>
+        <input matInput [(ngModel)]="Novela.disponibilidade">
+    </mat-form-field>
+
+    <p>Digite o nome do estudio</p>
+    <mat-form-field appearance="fill" class="inputText">
+        <mat-label>Nome do estudio</mat-label>
+        <input matInput [(ngModel)]="Novela.estudio">
+    </mat-form-field>
+
+    <!-- checkbox ou lista de opcoes talvez agrupar com o proximo -->
+    <div class="checkbox">
+        <div class="status">
+            <p>Está em lançamento ou finalizado:</p>
+            <mat-checkbox [(ngModel)]="Novela.status" value="L">Lançamento</mat-checkbox>
+            <mat-checkbox>finalizado</mat-checkbox>
+        </div>
+
+        <!-- checkbox ou lista de opcoes -->
+        <div class="visto">
+            <p>Já assistiu ou não:</p>
+            <mat-checkbox>Já assisti</mat-checkbox>
+            <mat-checkbox>Não assisti</mat-checkbox>
+            <mat-checkbox>Ainda assistirei</mat-checkbox>
+        </div>
+    </div>
+    <div class="numero">
+        <div class="temps">
+            <p>Quantas temporadas tem?</p>
+            <mat-form-field appearance="fill">
+                <mat-label>Numero de temporadas</mat-label>
+                <input mat-input type="number" [(ngModel)]="Novela.temps">
+            </mat-form-field>
+        </div>
+        
+        <div class="maxEps">
+            <p>Quantas episodios tem?</p>
+            <mat-form-field appearance="fill">
+                <mat-label>Numero de episodios</mat-label>
+                <input mat-input type="number" [(ngModel)]="Novela.maxEps">
+            </mat-form-field>
+        </div>
+        
+        <!-- data -->
+        <div class="data">
+            <p>Quando a novela lancou?</p>
+            <mat-form-field appearance="fill">
+                <mat-label>Digite o ...</mat-label>
+                <input matInput type="date" [(ngModel)]="Novela.dtLancamento">
+            </mat-form-field>
+        </div>
+    </div>
+</form>
+
+<button mat-raised-button (click)="enviaDados()" class="envio"> Enviar </button>
