--- a/src/app/popups/form-filme/form-filme.component.html
+++ b/src/app/popups/form-filme/form-filme.component.html
@@ -35,16 +35,16 @@
     <div class="checkbox">
         <div class="status">
             <p>Está em lançamento ou finalizado:</p>
-            <mat-checkbox>Lançamento</mat-checkbox>
-            <mat-checkbox>finalizado</mat-checkbox>
+            <mat-checkbox value="L" [(ngModel)]="Filme.status">Lançamento</mat-checkbox>
+            <mat-checkbox value="F" [(ngModel)]="Filme.status">Finalizado</mat-checkbox>
         </div>
 
         <!-- checkbox ou lista de opcoes -->
         <div class="visto">
             <p>Já assistiu ou não:</p>
-            <mat-checkbox>Já assisti</mat-checkbox>
-            <mat-checkbox>Não assisti</mat-checkbox>
-            <mat-checkbox>Ainda assistirei</mat-checkbox>
+            <mat-checkbox value="vi" [(ngModel)]="Filme.statusVisto">Já assisti</mat-checkbox>
+            <mat-checkbox value="nvi" [(ngModel)]="Filme.statusVisto">Não assisti</mat-checkbox>
+            <mat-checkbox value="ass" [(ngModel)]="Filme.statusVisto">Ainda assistirei</mat-checkbox>
         </div>
     </div>
 
@@ -61,7 +61,7 @@
         <div class="data">
             <p>Quando a serie lancou?</p>
             <mat-form-field appearance="fill">
-                <mat-label>Digite o ...</mat-label>
+                <mat-label>Data de lançamento</mat-label>
                 <input matInput type="date" [(ngModel)]="Filme.dtLancamento">
         </mat-form-field>
         </div>
