--- a/src/app/popups/form-novela/form-novela.component.html
+++ b/src/app/popups/form-novela/form-novela.component.html
@@ -35,16 +35,16 @@
     <div class="checkbox">
         <div class="status">
             <p>Está em lançamento ou finalizado:</p>
-            <mat-checkbox [(ngModel)]="Novela.status" value="L">Lançamento</mat-checkbox>
-            <mat-checkbox>finalizado</mat-checkbox>
+            <mat-checkbox value="L" [(ngModel)]="Novela.status">Lançamento</mat-checkbox>
+            <mat-checkbox value="F" [(ngModel)]="Novela.status">Finalizado</mat-checkbox>
         </div>
 
         <!-- checkbox ou lista de opcoes -->
         <div class="visto">
             <p>Já assistiu ou não:</p>
-            <mat-checkbox>Já assisti</mat-checkbox>
-            <mat-checkbox>Não assisti</mat-checkbox>
-            <mat-checkbox>Ainda assistirei</mat-checkbox>
+            <mat-checkbox value="vi" [(ngModel)]="Novela.status">Já assisti</mat-checkbox>
+            <mat-checkbox value="nvi" [(ngModel)]="Novela.status">Não assisti</mat-checkbox>
+            <mat-checkbox value="ass" [(ngModel)]="Novela.status">Ainda assistirei</mat-checkbox>
         </div>
     </div>
     <div class="numero">
